<resources>
    <string name="app_name">CGR</string>
    <string name="cr_ation_de_compte">Création de compte</string>
    <string name="remplir_le_formulaire_manuellement">Remplir le formulaire manuellement</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="create_compte">cree</string>
    <string name="carte_de_fid_lit">Carte de fidélité</string>
    <string name="ville">Ville</string>
    <string name="code_postal">Code postal</string>
    <string name="adresse">Adresse</string>
    <string name="email">Email</string>
    <string name="pr_nom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="txtTitle">CGR</string>
    <string name="txtUpdate">Save updates</string>
    <string name="txtUserAccount">User Account</string>
    <string name="txtName">Name</string>
    <string name="txtLastName">Last Name</string>
    <string name="txtEmail">Email</string>
    <string name="txtAddress">Address</string>
    <string name="txtZipCode">Zip Code</string>
    <string name="txtCity">City</string>
    <string name="txtLoyaltyCard">Loyalty Card</string>
    <string name="buttonBack">Back</string>
    <string name="txtFilms">Films</string>
    <string name="txtSalles">Salles</string>
    <string name="txtCarte">Carte</string>
    <string name="txtPanier">Panier</string>
    <string name="txtDescription">Description :</string>
    <string name="txtDuree">Durée :</string>
    <string name="txtAjouterPanier">Ajouter au panier</string>
    <string name="txtMinutes">minutes</string>
    <string name="txtParkingInfo">Parking info :</string>
    <string name="txtTransport">Transport :</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_greeting">Bonjour Utilisateur</string>
    <string name="profile_de_l_utilisateur">profile de l\'utilisateur</string>
    <string name="delete_compte">supprimer le compte</string>
</resources>