<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="55dp">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="250dp"
        android:layout_height="97dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/cr_ation_de_compte"
        android:textSize="25sp"
        android:textColor="@android:color/holo_blue_dark"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:text="@string/nom" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:text="@string/pr_nom" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textEmailAddress"
        android:text="@string/email" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:text="@string/adresse" />

    <EditText
        android:id="@+id/postalCodeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textPostalAddress"
        android:text="@string/code_postal"
        android:autofillHints="postalCode" />

    <EditText
        android:id="@+id/cityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:text="@string/ville" />

    <EditText
        android:id="@+id/loyaltyCardEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:inputType="text"
        android:text="@string/carte_de_fid_lit" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/create_compte" />

</LinearLayout>