<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAccountActivity">
        <include
            layout="@layout/activity_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/EditTextLastName"
                android:id="@+id/editTextTextLastName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/txtLastName"
                android:inputType="txtLastName"/>

            <EditText
                style="@style/EditTextName"
                android:id="@+id/editTextTextName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/txtName"
                android:inputType="txtName"/>

            <EditText
                style="@style/EditTextEmail"
                android:id="@+id/editTextTextEmail"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/txtEmail"
                android:inputType="txtEmail"/>

            <EditText
                style="@style/EditTextAddress"
                android:id="@+id/editTextTextAddress"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/textAddress"
                android:inputType="txtAddress"/>

            <EditText
                style="@style/EditTextZipCode"
                android:id="@+id/editTextTextZipCode"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/txtZipCode"
                android:inputType="txtZipCode"/>

            <EditText
                style="@style/EditTextCity"
                android:id="@+id/editTextTextCity"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/txtCity"
                android:inputType="txtCity"/>


            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:text="@string/txtUpdate"/>
        </ScrollView>

</LinearLayout>