<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <include
        layout="@layout/header_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewFilms"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TextTabbar"
            android:text="@string/txtFilms"/>
        <TextView
            android:id="@+id/textViewSalles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TextTabbar"
            android:text="@string/txtSalles"/>
        <TextView
            android:id="@+id/textViewCarte"
            style="@style/TextTabbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txtCarte"/>
        <TextView
            android:id="@+id/textViewPanier"
            style="@style/TextTabbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txtPanier"/>
    </LinearLayout>
</LinearLayout>